#1233: Add sample India zipcode numbers, thanks to @waveking

--- a/validators/zipCode.html
+++ b/validators/zipCode.html
@@ -69,15 +69,15 @@ countries:
         - "ABCDE"
         - "DE 52240 XY"
     - country: India
-+     code: IN
-+     valid:
-+       - "226024"
-+       - "201014"
-+       - "226 021"
-+     invalid:
-+       - "226-024"
-+       - "11023"
-+       - "A226023"
+      code: IN
+      valid:
+        - "226024"
+        - "201014"
+        - "226 021"
+      invalid:
+        - "226-024"
+        - "11023"
+        - "A226023"
     - country: Italy
       code: IT
       valid:
